* Added class parameter to the table format which allows setting the css class. 
* Added alpha version of native SMW Ask API with moudles ask and askargs.
* Fixed display of properties of type URL (bug 30912).
* Fixed hide query functionality on Special:Ask (bug 30768).
* Fixed display of internal SMW helper constants in certain queries (bug 30969).

== SMW 1.6.1 ==

Released on August 20, 2011.

* #ask queries now allow printouts (table columns) that are exactly the same.
  In previous versions, multiple printouts with the same label would be
  collapsed (e.g. {{#ask: [[Catgegory:City]] |?|?|?}} now shows four columns).
* Fixed continue and limit escaping issues on Special:Ask. 
* Fixed error occurring for invalid queries with count or debug formats.
* Fixed several small issues with the table format and cleaned it up somewhat.
* Fixed parsing of years for data properties.
* Internationalization improvements and layout tweaks to #smwdoc.

== SMW 1.6 ==

Released on July 30, 2011.

* Full support for synchronizing RDF stores with SMW, and for answering #ask
  queries based on this data. The communication happens via SPARQL (1.1), and
  all SPARQL-capable stores should be supported. The following settings are
  needed in LocalSettings.php:
    $smwgDefaultStore = 'SMWSparqlStore';
    $smwgSparqlDatabase = 'SMWSparqlDatabase';
    // The following should be set to the URLs to reach the store:
    $smwgSparqlQueryEndpoint = 'http://localhost:8080/sparql/';
    $smwgSparqlUpdateEndpoint = 'http://localhost:8080/update/';
    $smwgSparqlDataEndpoint = 'http://localhost:8080/data/'; // can be empty
  The specific support that SMW used to have for the RAP RDF store has been
  discontinued.
* The Type namespace has been abolished. Builtin types now are displayed by the
  special page Special:Types, and there are no "custom types" any longer.
  By default, the Type namespace is gone and existing pages in this namespace