@@ -375,6 +375,11 @@ Estimated progress of current update:',
 	'smw_adminlinks_datastructure' => 'Data structure',
 	'smw_adminlinks_displayingdata' => 'Data display',
 	'smw_adminlinks_inlinequerieshelp' => 'Inline queries help',
+	
+	// Category QP
+	'smw-paramdesc-category-delim' => 'The delimiter',
+	'smw-paramdesc-category-template' => 'A template to format the items with',
+	'smw-paramdesc-category-userparam' => 'A parameter to pass to the template',
 );
 
 /** Message documentation (Message documentation)
